Refatora backend com DTOs, atualiza frontend e adiciona gitignore global